--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="max-w-5xl mx-auto px-6 py-6 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-10">
 
     <div>
-      <h3 class="text-xl font-bold text-foreground mb-4">{{i18n.t('app-name')}} <span class="text-xs">{{i18n.t('APP_VERSION')}}</span></h3>
+      <h3 class="text-xl font-bold text-foreground mb-4">{{i18n.t('app-name')}} <span class="text-xs">{{version}}</span></h3>
       <p class="text-sm">
         {{i18n.t('footer.description')}}
       </p>
@@ -36,7 +36,7 @@
         <a href="#" class="hover:text-primary transition"><lucide-angular name="twitter"></lucide-angular></a>
         <a href="#" class="hover:text-primary transition"><lucide-angular name="instagram"></lucide-angular></a>
         <a href="#" class="hover:text-primary transition"><lucide-angular name="linkedin"></lucide-angular></a>
-        <a href="#" class="hover:text-primary transition"><lucide-angular name="github"></lucide-angular></a>
+        <a href="https://github.com/rcastrogo/AngularApp2026" target="_blank" class="hover:text-primary transition"><lucide-angular name="github"></lucide-angular></a>
         <a href="#" class="hover:text-primary transition"><lucide-angular name="youtube"></lucide-angular></a>
       </div>
     </div>
