--- a/src/app/components/app-table/app-table.component.html
+++ b/src/app/components/app-table/app-table.component.html
@@ -1,13 +1,13 @@
 
 <div 
   [attr.data-lng] = "i18n.langVersion()"
-  class="flex gap-1 mt-2 justify-between border-b pb-1 mb-2">
+  class="flex flex-wrap gap-2 mt-2 border-b pb-2 mb-2 items-center">
   <!-- 
   ===================================================================================
   Información de registros
   ===================================================================================
   -->
-  <div class="text-sm">
+  <div class="text-sm w-full md:w-auto md:flex-1">
     @if (sortedRows().length === 0) {
       {{ i18n.t('app-table.no-rows', { entity: entity }) }}
     } @else {
@@ -24,7 +24,7 @@
   Botones estandart
   ===================================================================================
   -->
-  <div class="flex items-end gap-2">
+  <div class="flex flex-wrap items-center gap-2 w-full md:w-auto justify-start md:justify-end">
     <button class="tool-bar-button " (click)="refresh()" [disabled]="waitingForRows">
       <lucide-icon name="refresh-ccw" />
     </button>
@@ -65,7 +65,7 @@
   Botones navegación
   ===================================================================================
   -->
-  <div class="flex items-center gap-1">
+  <div class="flex items-center w-full md:w-auto justify-start md:justify-end">
     <button class="tool-bar-button " (click)="firstPage()" [disabled]="currentPage() === 1">
       <lucide-icon name="chevrons-left" />
     </button>
