--- a/src/app/components/app-table/app-table-column-filter.component.html
+++ b/src/app/components/app-table/app-table-column-filter.component.html
@@ -68,7 +68,7 @@
                     <div class="size-4"></div>
                   }
                   <span class="flex-1">
-                    {{ value }}
+                    {{ displayValue(value, i18n )}}
                   </span>              
               </button>
             }
