--- a/src/app/components/app-table/app-table-menu.component.html
+++ b/src/app/components/app-table/app-table-menu.component.html
@@ -1,6 +1,6 @@
 <div class="inline-block">
 
-    <button [cdkMenuTriggerFor]="mainMenu" class="flex tool-bar-button">
+    <button [cdkMenuTriggerFor]="mainMenu" class="flex tool-bar-button p-2!">
       <lucide-icon name="menu" class="size-4"></lucide-icon>
     </button>
 
