--- a/src/app/components/app-alert/app-alert.component.html
+++ b/src/app/components/app-alert/app-alert.component.html
@@ -15,24 +15,26 @@
           </h2>
           <div role="none" class="bg-slate-200 dark:bg-slate-800 h-px w-full mt-2 mb-2"></div>
         }
+        
+        <div tabindex="0" class="sr-only"></div>
 
-        <div class="flex flex-row items-start gap-3 w-full">
+        <div class="flex flex-row items-center gap-3 w-full">
           @if(icon()){
             <div class="shrink-0 text-slate-900 dark:text-white">
               <lucide-angular [img]="icon()" class="size-9"></lucide-angular>
             </div>            
           }
           @if (isTemplate()) {
-              <ng-container *ngTemplateOutlet="template()"></ng-container>
+            <ng-container *ngTemplateOutlet="template(); context: context()"></ng-container>
           }
           @else if (isHtml()) {
             <div
-              class="text-slate-600 dark:text-slate-400 text-sm w-full"
+              class="text-slate-600 dark:text-slate-400 w-full"
               [innerHTML]="message()">
             </div>
           }
           @else {
-            <p class="text-slate-600 dark:text-slate-400 text-sm text-left">
+            <p class="text-slate-600 dark:text-slate-400 text-left">
               {{ message() }}
             </p>
           }
