feat: scrollable dialog and notification panel

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -13,6 +13,7 @@
       <router-outlet/>
     </main>
     <app-footer></app-footer>
+    <app-notification-panel></app-notification-panel>
   } @else {
     <app-loader></app-loader>
   }
